# pedaru

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  FILE_TABS_IMPLEMENTATION_PLAN.md  README.md  TESTING.md  TESTING_TABS.md  biome.json  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  create-release-tag.yml  release.yml  version-upgrade.yml
scripts/: generate-icons.sh
src-tauri/: Cargo.toml  Info.plist  Pedaru.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bookshelf.rs  db.rs  db_schema.rs  download_queue.rs  encoding.rs  gemini.rs  google_drive.rs  lib.rs  main.rs  menu.rs  oauth.rs  pdf.rs  secrets.rs  secure_string.rs  session.rs  settings.rs  types.rs
src-tauri/src/migrations/: 002_download_queue.sql  003_simplify_bookshelf.sql
src-tauri/tests/: pdf_integration.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: BookDetailModal.tsx  BookmarkSidebar.tsx  BookshelfItem.tsx  BookshelfMainView.tsx  BookshelfSidebar.tsx  ContextMenu.tsx  CustomTextLayer.tsx  FooterSlider.tsx  Header.tsx  HistorySidebar.tsx  MainSidebar.tsx  MainWindowHeader.tsx  OverlayContainer.tsx  PdfViewer.tsx  SearchResultsSidebar.tsx  Settings.tsx  StandaloneWindowControls.tsx  TabBar.tsx  TitleBar.tsx  TocSidebar.tsx  TranslationPopup.tsx  ViewerContent.tsx  WindowSidebar.tsx
src/contexts/: PdfViewerContext.tsx  PlatformContext.tsx
src/hooks/: types.ts  useAutoScroll.ts  useBookmarks.test.ts  useBookmarks.ts  useBookshelf.ts  useContextMenu.test.ts  useContextMenu.ts  useDocumentTitle.test.ts  useDocumentTitle.ts  useGoogleAuth.ts  useHeaderVisibility.test.ts  useHeaderVisibility.ts  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  useMenuHandlers.test.ts  useMenuHandlers.ts  useNavigation.ts  usePdfLoader.test.ts  usePdfLoader.ts  usePdfViewerState.test.ts  usePdfViewerState.ts  useSearch.ts  useSessionPersistence.test.ts  useSessionPersistence.ts  useStartup.ts  useTabManagement.ts  useTextSelection.ts  useWindowManagement.ts  useWindowSync.test.ts  useWindowSync.ts
src/lib/: bookshelfUtils.test.ts  (+14 more)
(+5 files in other folders)
