[package]
name = "pedaru"
version = "0.1.0"
description = "A PDF Viewer built with Tauri"
authors = ["you"]
edition = "2021"
default-run = "pedaru"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pedaru_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lopdf = "0.38"
encoding_rs = "0.8"
urlencoding = "2"

