[package]
name = "pedaru"
version = "0.1.0"
description = "A PDF Viewer built with Tauri"
authors = ["togatoga"]
edition = "2024"
default-run = "pedaru"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pedaru_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
rusqlite = "0.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lopdf = "0.38"
encoding_rs = "0.8"
urlencoding = "2"
base64 = "0.22"
anyhow = "1.0.100"
thiserror = "2.0.17"
keyring = "3"
zeroize = { version = "1.8", features = ["derive"] }

# Google Drive integration
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
rand = "0.8"
tiny_http = "0.12"
futures-util = "0.3"

# Linux-specific: use kernel keyring instead of Secret Service
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native"] }

# macOS-specific: use Keychain
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[dev-dependencies]
tempfile = "3"
